--- a/Notebook/NetworkEvolution.tex
+++ b/Notebook/NetworkEvolution.tex
@@ -2,5 +2,53 @@
 
 \section{IoT}
 
-\subsection{IoT pillars}
+he Cisco IoT System uses the concept of pillars to identify foundational elements. Specifically, the IoT System identifies the six technology pillars: Network Connectivity, Fog computing, Security, Data analysis, Management and Automation, Application Enablement Platform.\\
 
+The Cisco IoT network connectivity pillar identifies devices that can be used to provide IoT connectivity to many diverse industries and applications.\\
+
+Fog computing is an IoT network model. It enables end devices to run applications \emph{locally} and make immediate decisions. This reduces the data burden on networks, as raw data does not need to be sent over network connections. It enhances resiliency by allowing IoT devices to operate when network connections are lost. It also enhances security by keeping sensitive data from being transported beyond the edge where it is needed.
+
+The Cisco IoT security pillar offers scalable cybersecurity solutions:
+
+\begin{itemize}
+\item \textbf{Operational Technology (OT)} keeps power plants running and manages factory process lines
+\item \textbf{IoT Network security} includes network and perimeter security devices (e.g. switch, router)
+\item \textbf{IoT Physical security} enables surveillance in a wide variety of environments with Cisco Video Surveillance IP Cameras
+\end{itemize}
+
+The \textbf{Cisco IoT analytics} infrastructure consists of distributed network infrastructure components and IoT-specific, application programming interfaces (APIs).
+
+\section{Cloud computing}
+
+Cloud computing is a network model where servers and services are dispersed globally in distributed data centers. Cloud computing, with its “pay-as-you-go” model, allows organizations to treat computing and storage expenses more as a utility rather than investing in infrastructure. Capital expenditures are transformed into operating expenditures.\\
+
+\subsection{Cloud service}
+
+\begin{itemize}
+\item \textbf{SaaS} (Software as a Service): The cloud provider is responsible for access to services, such as email, communication, and Office 365 that are delivered over the Internet. The user is only needs to provide their data.
+\item \textbf{PaaS} (Platform as a Service): The cloud provider is responsible for access to the development tools and services used to deliver the applications.
+\item \textbf{IaaS} (Infrastructure as a Service): The cloud provider is responsible for access to the network equipment, virtualized network services, and supporting network infrastructure.
+\item \textbf{ITaaS} (IT support as a Service): cloud service providers provide IT support for each of the cloud computing services
+\end{itemize} 
+
+\subsection{Cloud model}
+
+\begin{itemize}
+\item \textbf{Public clouds:} Cloud-based applications and services offered in a public cloud are made available to the general population. Services may be free or are offered on a pay-per-use model, such as paying for online storage. The public cloud uses the Internet to provide services.
+\item \textbf{Private clouds:} Cloud-based applications and services offered in a private cloud are intended for a specific organization or entity, such as the \emph{government}. A private cloud can be set up using the organization's private network, though this can be expensive to build and maintain. A private cloud can also be managed by an outside organization with strict access security.
+\item \textbf{Hybrid clouds:} A hybrid cloud is made up of two or more clouds (example: part private, part public), where each part remains a distinctive object, but both are connected using a single architecture. Individuals on a hybrid cloud would be able to have degrees of access to various services based on user access rights.
+\item \textbf{Community clouds:} A community cloud is created for exclusive use by a specific community. The differences between public clouds and community clouds are the functional needs that have been customized for the community. For example, healthcare organizations must remain compliant with policies and laws (e.g., HIPAA) that require special authentication and confidentiality.
+\end{itemize}
+
+\subsection{Cloud Computing, Data Center, Virtualization}
+
+The terms ``data center'' and ``cloud computing'' are often incorrectly used. These are the correct definitions of data center and cloud computing:
+
+\begin{itemize}
+\item \textbf{Data center:} Typically a data storage and processing facility run by an in-house IT department or leased offsite.
+\item \textbf{Cloud computing:} Typically an off-premise service that offers on-demand access to a shared pool of configurable computing resources. These resources can be rapidly provisioned and released with minimal management effort.
+\end{itemize}
+
+Cloud computing is possible because of data centers. A data center is a facility used to house computer systems and associated components. Cloud computing is a service provided by data centers. Cloud service providers use data centers to host their cloud services and cloud-based resources.\\
+
+The terms ``cloud computing'' and ``virtualization'' are often used interchangeably; however, they mean different things. Virtualization is the foundation of cloud computing. Cloud computing separates the application from the hardware. Virtualization separates the OS from the hardware. 
