--- a/Notebook/CCNA notebook.tex
+++ b/Notebook/CCNA notebook.tex
@@ -16,23 +16,34 @@
 \listoffigures
 \listoftables
 
-\part{SCALING NETWORKS}
+\part{NETWORK FUNDAMENTALS}
 \include{LANdesign}
-\include{dhcp}
+\include{WANconcepts}
+
+\part{SWITCHING TECHNOLOGIES}
 \include{vtp}
 \include{Layer3switching}
 \include{stp}
 \include{EtherChannel}
-\include{hsrp}
+
+
+\part{ROUTING TECHNOLOGIES}
 \include{eigrp}
 \include{ospf}
 
-\part{CONNECTING NETWORKS}
-\include{WANconcepts}
-\include{ACL}
-\include{Monitoring}
-\include{QoS}
+\part{WAN TECHNOLOGIES}
 \include{PPP}
 \include{GRE,eBGP}
+\include{QoS}
+
+\part{INFRASTRUCTURE SERVICE}
+\include{dhcp}
+\include{hsrp}
+
+\part{INFRASTRUCTURE SECURITY}
+\include{ACL}
+
+\part{INFRASTRUCTURE MANAGEMENT}
+\include{Monitoring}
 \include{Troubleshooting}
 \end{document}
