--- a/Notebook/Monitoring.tex
+++ b/Notebook/Monitoring.tex
@@ -134,10 +134,6 @@ The data is retrieved via the \emph{snmpget} utility, issued on the NMS. Using t
 
 \subsubsection{SNMPv2}
 
-\begin{listing}
-\includegraphics[scale=1]{pictures/SNMPv2.PNG} 
-\end{listing}
-
 \begin{enumerate}
 \item (Required) Configure the community string and access level (read-only or read-write) with the snmp-server community string ro | rw command.
 
@@ -152,15 +148,23 @@ The data is retrieved via the \emph{snmpget} utility, issued on the NMS. Using t
 \item (Optional) Enable traps on an SNMP agent with the snmp-server enable traps notification-types command. If no trap notification types are specified in this command, then all trap types are sent. Repeated use of this command is required if a particular subset of trap types is desired.
 \end{enumerate}
 
+\begin{verbatim}
+R1(config)# snmp-server community batonaug ro SNMP_ACL
+R1(config)# snmp-server location NOC_SNMP_MANAGER
+R1(config)# snmp-server contact Wayne World
+R1(config)# snmp-server host 192.168.1.3 version 2c batonaug
+R1(config)# snmp-server enable traps
+R1(config)# 
+R1(config)# ip access-list standard SNMP_ACL
+R1(config-std-nacl)# permit 192.168.1.3
+\end{verbatim}
+
 \note To verify SNMP configuration, use any of the variations of the \texttt{show snmp} command.\\ \note Only the first step is required, the rest are optional.\\
 \note By default, SNMP does not have any traps set. Without this command, SNMP managers must poll for all relevant information. 
 
 \subsubsection{SNMPv3}
 
-SNMPv3 provides three security features: Message integrity and authentication, Encryption, Access control. SNMPv3 can be secured with the four steps.\\
-\begin{listing}
-\includegraphics[scale=1]{pictures/SNMPv3steps.PNG} 
-\end{listing}
+SNMPv3 provides three security features: Message integrity and authentication, Encryption, Access control. SNMPv3 can be secured with the four steps.
 
 \begin{verbatim}
 1	R1(config)# ip access-list standard PERMIT-ADMIN
